# sharelatex-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  README_CN.md  pyproject.toml
scripts/: probe_create_formats.py  probe_login.py  probe_projects.py  test_compile_diagnostics.py  test_compile_roundtrip.py  test_mcp_tools.py  test_write_roundtrip.py
sharelatex_mcp/: __init__.py  config.py  diff_engine.py  doc_editor.py  errors.py  http.py  projects.py  realtime.py  server.py  session.py  validation.py
tests/: test_compile_diagnostics.py  test_diff_operations.py  test_runtime_safety.py
